--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://nehapatange2004.github.io/PopXAssignement",
   "name": "educaseassignment",
   "private": true,
   "version": "0.0.0",
